# Fast-Sample

./: .gitignore  CMakeLists.txt  Lib.py  README.md  kernel.cu  main.py  myhead.h
include/: common.h  manager.h  manager_func.cuh  storage.h  substorage.h
src/: CMakeLists.txt  manager.cpp  manager.cu  manager_func.cu  storage.cpp  substorage.cpp
